--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -4,16 +4,10 @@
 
 \subsection{Stručný celkový přehled}
 
-- šermíř.. rigidbody
-  meč.. další rigidbody připojené jointem
-
-(insert uml diagram here)
-- SwordMovement, SwordsmanMovement a související komponenty (možná rozdělit do 2 diagramů?)
-
 
 \subsection{Zpracování uživatelského vstupu}
 
-\subsection{Mody ovládání}
+\subsection{Mody ovládání} \label{modesOfSwordMovementSubsection}
 
 \subsection{Animace šermíře}
 
